Add Rui Fan datasets link

--- a/README.org
+++ b/README.org
@@ -9,7 +9,8 @@ The algorithms used are based largely on those presented in these papers:
 
 We used the following datasets to test and build our project:
 1. [[http://www.cvlibs.net/datasets/kitti/][KITTI]]
-2. Other ones
+2. [[https://github.com/ruirangerfan/road_surface_3d_reconstruction_datasets][Rui Fan Datasets]]
+3. Other ones
 
 * Installation
 #+begin_src 
